--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version "1.1.0"
 }
 
-apply from: "dependencies.gradle"
-
-group = "com.mangalend.content"
-version = "${projectVersions.projectVersion}"
-sourceCompatibility = "${projectVersions.sourceCompatibility}"
+group = 'com.mangalend.content'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 configurations {
     compileOnly {
@@ -21,14 +19,14 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation "org.jooq:jooq:${databaseVersions.jooq}"
-    implementation "org.liquibase:liquibase-core"
-    compileOnly "org.projectlombok:lombok"
-    annotationProcessor "org.projectlombok:lombok"
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.jooq:jooq:3.17.8'
+    implementation 'org.liquibase:liquibase-core'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named("test") {
+tasks.named('test') {
     useJUnitPlatform()
 }
